[package]
name = "parserst"
version = "0.1.0"
edition = "2024"

[dependencies]
html2md = "0.2.15"
thiserror = "2.0.17"

[lints.clippy]
bool_comparison = "deny"
duplicate_mod = "deny"
inconsistent_struct_constructor = "deny"
invalid_regex = "deny"
mem_forget = "deny"
mixed_case_hex_literals = "deny"
suspicious_arithmetic_impl = "deny"
uninit_assumed_init = "deny"
suspicious_else_formatting = "deny"
suspicious_op_assign_impl = "deny"
suspicious_to_owned = "deny"
cmp_owned = "deny"
cmp_null = "deny"
manual_map = "deny"

too_many_arguments = "warn"
cyclomatic_complexity = "warn"
large_enum_variant = "warn"
needless_borrow = "warn"
needless_pass_by_value = "warn"
redundant_clone = "warn"
unnecessary_cast = "warn"
inefficient_to_string = "warn"
or_fun_call = "warn"
unnecessary_to_owned = "warn"
map_clone = "warn"
flat_map_identity = "warn"
needless_collect = "warn"
vec_init_then_push = "warn"

len_zero = "allow"
range_plus_one = "allow"
manual_range_contains = "allow"
